--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "bootstrap": "^5.1.3",
     "bootstrap-vue": "^2.21.2",
+    "calendar": "^0.1.0",
     "core-js": "^3.6.5",
     "firebase": "^9.3.0",
     "moment": "^2.29.1",
